# protobuf-qml

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  README.md  Vagrantfile  all.gyp  appveyor.yml  bench.sh  build.py  build.sh  docker-run-x11.sh
cmake/: FindGRPC++.cmake
compiler/: CMakeLists.txt
compiler/protobuf/qml/: base64.cpp  base64.h  compiler_common.h  compiler_util.cpp  compiler_util.h  enum_generator.cpp  enum_generator.h  field_generator.cpp  field_generator.h  main.cpp  message_generator.cpp  message_generator.h  oneof_generator.cpp  oneof_generator.h  qml_generator.cpp  qml_generator.h  qml_generator_test.cpp  service_generator.cpp  service_generator.h  util.cpp  util.h
compiler/protobuf/qml/compiler/: util.cpp  util.h
compiler/qpb/: generators.cpp  generators.h  main.cpp  qml_generator.cpp  qml_generator.h
examples/WebSockets/: CMakeLists.txt  foo.proto
examples/WebSockets/client/: client.cpp  client.qml
examples/WebSockets/server/: server.cpp  server.qml
examples/XMLHttpRequest/: CMakeLists.txt  my_message.proto
examples/XMLHttpRequest/client/: XhrClient.qml  xhr_client.cpp
examples/XMLHttpRequest/server/: server.py
examples/cpp/: CMakeLists.txt  cpp_example.proto  main.cpp  main.qml
lib/: message.js  qmldir
lib/grpc/: CMakeLists.txt
lib/grpc/imports/: Client.qml  ClientReader.qml  ClientReaderWriter.qml  ClientWriter.qml  qmldir
lib/grpc/qml/: base.cpp  base.h  channel.cpp  channel.h  client_calldata.h  credentials.cpp  credentials.h  global_instance.cpp  global_instance.h  grpc_plugin.cpp  grpc_plugin.h  logging.cpp  logging.h  reader.cpp  reader.h  reader_writer.cpp  reader_writer.h  server.cpp  server.h  server_bidi.cpp  server_bidi.h  server_calldata.h  server_credentials.cpp  server_credentials.h  server_reader.cpp  server_reader.h  server_unary.cpp  server_unary.h  server_writer.cpp  server_writer.h  simple_handler.h  unary.cpp  unary.h  writer.cpp  writer.h
lib/grpc/test/: CMakeLists.txt  async_server.cpp  hello.proto  server.cpp  tst_grpc_channel.qml  tst_grpc_server.qml
lib/protobuf/: CMakeLists.txt
lib/protobuf/imports/: BufferService.qml  ClientMethod.qml  File.qml  FileIO.qml  MemoryBuffer.qml  ReaderMethod.qml  ReaderWriterMethod.qml  ServerReaderMethod.qml  ServerReaderWriterMethod.qml  ServerUnaryMethod.qml  ServerWriterMethod.qml  UnaryMethod.qml  WriterMethod.qml  boilerplate.js  call.js  errors.js  message.js  qmldir
lib/protobuf/qml/: buffer.cpp  buffer.h  common.h  conversions.cpp  conversions.h  descriptor_database.cpp  descriptor_database.h  descriptors.cpp  descriptors.h  file.cpp  file.h  io.cpp  io.h  io2.h  memory.cpp  memory.h  method.cpp  method.h  plugin.cpp  plugin.h  processor.cpp  processor.h  protobuf_plugin.cpp  protobuf_plugin.h  server_method.cpp  server_method.h  util.cpp  util.h  wire_format_lite.cpp  wire_format_lite.h
lib/protobuf/qml/v4/: descriptor.cpp  descriptor.h  v4util.cpp  v4util.h
lib/qml/: Async.qml  boilerplate.js  message.js
lib/qpb/: common.h  descriptor_database.cpp  descriptor_database.h  file.cpp  file.h  io.cpp  io.h  memory.cpp  memory.h  plugin.cpp  plugin.h  wire_format_lite.cpp  wire_format_lite.h
sandbox/: qmldir  sandbox.gyp  tst_.qml
sandbox/qpb/: sandbox.cpp  sandbox.h  sandbox_plugin.cpp  sandbox_plugin.h
test/: CMakeLists.txt  ProtobufQmlTest.proto  ProtobufQmlTest2.proto  QpbTest.proto  QpbTest2.proto  oneof_test.proto  recursive_test.proto  test_main.cpp  tst_file.qml  tst_jsobject.qml  tst_message.qml  tst_nesting.qml  tst_oneof.qml  tst_parse_error.qml  tst_primitive.qml  tst_protobuf_qml.qml  tst_qbs.qml  tst_repeated.qml  tst_serialize_error.qml
test/grpc/: CMakeLists.txt  async_server.cpp  common.js  server.cpp  test_main.cpp  tst_grpc_channel.qml  tst_grpc_server.qml
test/protobuf/: CMakeLists.txt  ProtobufQmlTest.proto  ProtobufQmlTest2.proto  maps.proto  recursive_test.proto  serialization_test.proto  tst_benchmark.qml  tst_binary.qml  tst_file.qml  tst_jsobject.qml  tst_map.qml  tst_message.qml  tst_nesting.qml  tst_oneof.qml  tst_parse_error.qml  tst_primitive.qml  tst_recursive.qml  tst_repeated.qml  tst_serialization.qml  tst_serialize_error.qml
test/protobuf/cpp/: CMakeLists.txt  test_convert.cpp  test_convert.proto  test_convert.qml
tools/: CMakeLists.txt.grpc.template  bootstrap.py  build_dependencies.py  buildenv.py  requirements.txt  run_test.py  setup_env.bat  setup_env.sh
